--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "mkdir -p www && cp index.html favicon.svg www/ && cp -r js assets www/"
+    "build": "mkdir -p www && cp index.html favicon.png www/ && cp -r js assets www/"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
     "@capacitor/network": "^7.0.2"
+  },
+  "devDependencies": {
+    "@capacitor/assets": "^3.0.5"
   }
 }
