--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 assets/3d/baby_yoda_detailed_colors.json filter=lfs diff=lfs merge=lfs -text
+assets/puzzles/grinch/grinch_colors.json filter=lfs diff=lfs merge=lfs -text
