--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 assets/3d/baby_yoda_detailed_colors.json filter=lfs diff=lfs merge=lfs -text
 assets/puzzles/grinch/grinch_colors.json filter=lfs diff=lfs merge=lfs -text
+assets/puzzles/baby_yoda/baby_yoda_colors.json filter=lfs diff=lfs merge=lfs -text
