--- a/assets/puzzles/grinch/config.json
+++ b/assets/puzzles/grinch/config.json
@@ -23,7 +23,14 @@
   "cut": {
     "filletRadius": 0.14
   },
+  "material": {
+    "roughness": 0.26,
+    "metalness": 0.31,
+    "normalScale": 0,
+    "useSparkle": false
+  },
   "fileType": "stl",
   "format": "binary_v1",
-  "timestamp": "2025-12-09T08:48:39.794Z"
+  "timestamp": "2025-12-09T08:48:39.794Z",
+  "colorPath": "grinch_colors.json"
 }
