--- a/assets/puzzles/grinch/cubies/config.json
+++ b/assets/puzzles/grinch/cubies/config.json
@@ -1,6 +1,7 @@
 {
   "id": null,
   "name": "grinch",
+  "thumbnail": "thumbnail.png",
   "dimensions": {
     "x": 2,
     "y": 2,
@@ -22,7 +23,14 @@
   "cut": {
     "filletRadius": 0.14
   },
+  "material": {
+    "roughness": 0.26,
+    "metalness": 0.31,
+    "normalScale": 0,
+    "useSparkle": false
+  },
   "fileType": "stl",
   "format": "binary_v1",
-  "timestamp": "2025-12-09T08:48:39.794Z"
+  "timestamp": "2025-12-09T08:48:39.794Z",
+  "colorPath": "grinch_colors.json"
 }
