fix: solve detection for fisher cube by adding ignored centers to solve settings and consolidate puzzle configuration

--- a/assets/puzzles/fisher_cube/config.json
+++ b/assets/puzzles/fisher_cube/config.json
@@ -30,6 +30,20 @@
     "normalScale": 0.34,
     "useSparkle": true
   },
+  "solveSettings": {
+    "ignoreCenters": [
+      {
+        "x": 0,
+        "y": 1,
+        "z": 0
+      },
+      {
+        "x": 0,
+        "y": -1,
+        "z": 0
+      }
+    ]
+  },
   "format": "binary_v1",
-  "timestamp": "2025-12-13T19:09:26.845Z"
+  "timestamp": "2025-12-13T19:36:20.311Z"
 }
