--- a/assets/puzzles/fisher_cube/config.json
+++ b/assets/puzzles/fisher_cube/config.json
@@ -1,5 +1,4 @@
 {
-  "id": null,
   "name": "Fisher Cube",
   "dimensions": {
     "x": 3,
@@ -22,7 +21,7 @@
   "cut": {
     "filletRadius": 0.05,
     "useSingleColor": true,
-    "singleColor": "#43484D"
+    "singleColor": "#303336"
   },
   "material": {
     "roughness": 0.48,
@@ -44,6 +43,6 @@
       }
     ]
   },
-  "format": "binary_v1",
-  "timestamp": "2025-12-13T19:36:20.311Z"
+  "fileType": "3mf",
+  "timestamp": "2025-12-15T07:41:17.864Z"
 }
