refactor: Rename application from Cube App to Cube Vault and update all related assets and configurations.

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.redkb.cubeapp",
-  "appName": "Cube App",
+  "appId": "com.redkb.cubevault",
+  "appName": "Cube Vault",
   "webDir": "www"
 }
