--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.redkb.cubeapp"
+    namespace "com.redkb.cubevault"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.redkb.cubeapp"
+        applicationId "com.redkb.cubevault"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 200
