--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -11,7 +11,7 @@ apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':capacitor-filesystem')
     implementation project(':capacitor-network')
-
+    implementation "com.android.billingclient:billing:7.1.1"
 }
 
 
