--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -1,9 +1,8 @@
-name: Build Android App
-
 on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -33,14 +32,14 @@ jobs:
         run: npx cap sync android
 
       - name: Decode Keystore
-        if: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+        if: secrets.ANDROID_KEYSTORE_BASE64 != ''
         env:
           ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
         run: |
           echo "$ANDROID_KEYSTORE_BASE64" | base64 --decode > android/app/release-key.keystore
 
       - name: Build Signed Release Bundle
-        if: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+        if: secrets.ANDROID_KEYSTORE_BASE64 != ''
         env:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
@@ -54,7 +53,7 @@ jobs:
             -Pandroid.injected.signing.key.password=$KEY_PASSWORD
 
       - name: Build Debug APK (Fallback/Artifact)
-        if: ${{ !secrets.ANDROID_KEYSTORE_BASE64 }}
+        if: secrets.ANDROID_KEYSTORE_BASE64 == ''
         working-directory: android
         run: ./gradlew assembleDebug
 
