--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -8,6 +8,11 @@ jobs:
   build:
     name: Build Android APK & Bundle
     runs-on: ubuntu-latest
+    env:
+      ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
     steps:
       - uses: actions/checkout@v3
 
@@ -32,18 +37,12 @@ jobs:
         run: npx cap sync android
 
       - name: Decode Keystore
-        if: secrets.ANDROID_KEYSTORE_BASE64 != ''
-        env:
-          ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+        if: env.ANDROID_KEYSTORE_BASE64 != ''
         run: |
           echo "$ANDROID_KEYSTORE_BASE64" | base64 --decode > android/app/release-key.keystore
 
       - name: Build Signed Release Bundle
-        if: secrets.ANDROID_KEYSTORE_BASE64 != ''
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        if: env.ANDROID_KEYSTORE_BASE64 != ''
         working-directory: android
         run: |
           ./gradlew bundleRelease \
@@ -53,7 +52,7 @@ jobs:
             -Pandroid.injected.signing.key.password=$KEY_PASSWORD
 
       - name: Build Debug APK (Fallback/Artifact)
-        if: secrets.ANDROID_KEYSTORE_BASE64 == ''
+        if: env.ANDROID_KEYSTORE_BASE64 == ''
         working-directory: android
         run: ./gradlew assembleDebug
 
